Add the kafka streaming with docker

--- a/notebooks/02_model_training.ipynb
+++ b/notebooks/02_model_training.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('../data/happiness_dataset_cleaned.csv')"
+    "df = pd.read_json('../data/happiness_dataset_cleaned.json')"
    ]
   },
   {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,22 +46,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of Linear Regression: 0.9852277849790076\n",
-      "Accuracy of Lasso: 0.9849907887476183\n",
-      "Accuracy of Ridge: 0.9853341629783893\n",
-      "Accuracy of RidgeCV: 0.9853341629735776\n",
-      "Accuracy of LassoCV: 0.9854045096329477\n",
-      "Accuracy of LassoLars: 0.9849907887476183\n",
-      "Accuracy of LassoLarsCV: 0.9853518330190502\n",
-      "Accuracy of LassoLarsIC: 0.985289612178536\n",
-      "Accuracy of XGBRegressor: 0.9966248551540543\n"
+      "Accuracy of Linear Regression: 0.9852277849789651\n",
+      "Accuracy of Lasso: 0.9849907887476308\n",
+      "Accuracy of Ridge: 0.9853341629783658\n",
+      "Accuracy of RidgeCV: 0.9853341629755834\n",
+      "Accuracy of LassoCV: 0.985404509633016\n",
+      "Accuracy of LassoLars: 0.9849907887476308\n",
+      "Accuracy of LassoLarsCV: 0.9853518330188948\n",
+      "Accuracy of LassoLarsIC: 0.9852896121785039\n",
+      "Accuracy of XGBRegressor: 0.9966248551540726\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
